--- a/media_monitor.html
+++ b/media_monitor.html
@@ -65,11 +65,10 @@
 </header>
 
 <nav>
-    <a href="#">Home</a>
-    <a href="#">Coverage</a>
-    <a href="#">Polling</a>
-    <a href="#">Events</a>
-    <a href="#">About</a>
+    <a href="index.html">Home</a>
+    <a href="coverage.html">Coverage</a>
+    <a href="methodology.html">Methodology</a>
+    <a href="about.html">About</a>
 </nav>
 
 
@@ -79,19 +78,23 @@
 
     <div class="grid">
         <div class="chart-container">
-            <h3>Coverage Breakdown</h3>
-            <iframe src="/Users/luisignaciomenendezgarcia/Dropbox/MediaBias/media_monitor/figures/interactive_mentions_plot.html" width="100%" height="500" frameborder="0"></iframe>
+            <h3>Coverage Breakdown by Party</h3>
+            <iframe src="/figures/interactive_mentions_plot.html" width="500" height="400" frameborder="0"></iframe>
         </div>
     </div>
+    <div class="grid">
+        <div class="chart-container">
+            <h3>Coverage Breakdown by Political Actor</h3>
+            <iframe src="/figures/interactive_mentions_plot_politicians.html" width="500" height="400" frameborder="0"></iframe>
+        </div>
+    </div>
+
+
 </div>
 
 
 
 
-
-<footer>
-    <p>Contact us: inf@mediainsights.com</p>
-</footer>
 
 </body>
 </html>
