--- a/coverage.html
+++ b/coverage.html
@@ -5,29 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coverage</title>
     <style>
-        /* Similar styles as in your main file */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: space-around;
+            background-color: #34495e;
+            padding: 15px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .content {
+            padding: 20px;
+            max-width: 1200px;
+            margin: auto;
+        }
+        .chart-container {
+            background-color: white;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
 
 <header>
     <h1>TV News Media Monitor</h1>
+    <p>Explore media coverage and bias trends in Spanish TV News Programs</p>
 </header>
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="coverage.html">Coverage</a>
+    <a href="coverage.html">Media Bias</a>
     <a href="methodology.html">Methodology</a>
     <a href="about.html">About</a>
 </nav>
 
 <div class="content">
-    <h2>Coverage Breakdown</h2>
+    <h2>Med Breakdown</h2>
     <div class="chart-container">
         <h3>Coverage Composition</h3>
-        <iframe src="/figures/topic_composition_plot.html" width="500" height="400" frameborder="0"></iframe>
+        <iframe src="http://127.0.0.1:8051/" width="100%" height="600" frameborder="0"></iframe>
     </div>
 </div>
+
+
 
 </body>
 </html>
