--- a/index.html
+++ b/index.html
@@ -1,6 +1,99 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Media Insights</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: space-around;
+            background-color: #34495e;
+            padding: 15px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .content {
+            padding: 20px;
+            max-width: 1200px;
+            margin: auto;
+        }
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+        }
+        .chart-container {
+            background-color: white;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .chart-container img {
+            max-width: 100%;
+            border-radius: 10px;
+        }
+        footer {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 30px;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>TV News Media Monitor</h1>
+    <p>Explore media coverage and bias trends with interactive charts in Spanish TV News Programs.</p>
+</header>
+
 <nav>
     <a href="index.html">Home</a>
-    <a href="coverage.html">Coverage</a>
+    <a href="coverage.html">Media Bias</a>
     <a href="methodology.html">Methodology</a>
-    <a href="about.html">About</a>
 </nav>
+
+
+<div class="content">
+    <h2>Media Bias Breakdown</h2>
+    <p>Select a category below to see in-depth charts of media bias, coverage, and trends over time.</p>
+
+    <div class="grid">
+        <div class="chart-container">
+            <h3>Coverage Breakdown by Party</h3>
+            <iframe src="/figures/interactive_mentions_plot.html" width="500" height="400" frameborder="0"></iframe>
+        </div>
+    </div>
+    <div class="grid">
+        <div class="chart-container">
+            <h3>Coverage Breakdown by Political Actor</h3>
+            <iframe src="/figures/interactive_mentions_plot_politicians.html" width="500" height="400" frameborder="0"></iframe>
+        </div>
+    </div>
+
+
+</div>
+
+
+
+
+
+</body>
+</html>
