--- a/coverage.html
+++ b/coverage.html
@@ -59,14 +59,13 @@
     <a href="index.html">Home</a>
     <a href="coverage.html">Media Bias</a>
     <a href="methodology.html">Methodology</a>
-    <a href="about.html">About</a>
 </nav>
 
 <div class="content">
     <h2>Med Breakdown</h2>
     <div class="chart-container">
         <h3>Coverage Composition</h3>
-        <iframe src="http://127.0.0.1:8051/" width="100%" height="600" frameborder="0"></iframe>
+        <iframe src="https://spanish-media-monitor-7458bc4bd3d9.herokuapp.com" width="100%" height="600" frameborder="0"></iframe>
     </div>
 </div>
 
