--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
 </nav>
 
 
+<style>
+    .chart-container iframe {
+        transform: scale(1.5); /* Adjust scaling factor as needed */
+        transform-origin: 0 0; /* Ensure scaling starts from top left */
+        width: 1200px; /* Adjust based on scale */
+        height: 750px;
+    }
+</style>
+
+
+
 <div class="content">
     <h2>Media Bias Breakdown</h2>
     <p>Select a category below to see in-depth charts of media bias, coverage, and trends over time.</p>
