--- a/coverage.html
+++ b/coverage.html
@@ -62,9 +62,10 @@
 </nav>
 
 <div class="content">
-    <h2>Med Breakdown</h2>
+    <h2>Bias detector</h2>
     <div class="chart-container">
         <h3>Coverage Composition</h3>
+        <p> Assessing media bias remains a hard challenge and necesarely depends on an underlying notion of truth. We present an agnostic measure that only takes into account dissagrement in the treatment of the same stories by Spanish Outlets. This measure does not indicate any bias per se but helps discerning what are the topics that make lower consensus.  The interactive plot shows the entropy score for each day. Lower entropy days represent occasions in which the outlets agreed more in the relevance of the topics of the day. Clicking on each day displays the composition of topics. More details on the definition can be seen on the Methology section. </p>
         <iframe src="https://spanish-media-monitor-7458bc4bd3d9.herokuapp.com" width="100%" height="600" frameborder="0"></iframe>
     </div>
 </div>
