--- a/index.html
+++ b/index.html
@@ -73,8 +73,6 @@
 
 
 
-
-
 <div class="content">
     <h2>Media Bias Breakdown</h2>
     <p>Select a category below to see in-depth charts of media bias, coverage, and trends over time.</p>
@@ -82,17 +80,15 @@
     <div class="grid">
         <div class="chart-container">
             <h3>Coverage Breakdown by Party</h3>
-            <iframe src="./figures/interactive_mentions_plot.html" width="900" height="500" frameborder="0"></iframe>
+            <iframe src="./figures/interactive_mentions_plot.html" style="width: 100%; height: 500px;" frameborder="0"></iframe>
         </div>
     </div>
     <div class="grid">
         <div class="chart-container">
             <h3>Coverage Breakdown by Political Actor</h3>
-            <iframe src="./figures/interactive_mentions_plot_politicians.html" width="900" height="500" frameborder="0"></iframe>
+            <iframe src="./figures/interactive_mentions_plot_politicians.html" style="width: 100%; height: 500px;" frameborder="0"></iframe>
         </div>
     </div>
-
-
 </div>
 
 
