--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
         .grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: 1fr; /* Single column by default */
             gap: 20px;
         }
         .chart-container {
@@ -71,25 +71,25 @@
 </nav>
 
 
-
-
 <div class="content">
     <h2>Media Bias Breakdown</h2>
     <p>Select a category below to see in-depth charts of media bias, coverage, and trends over time.</p>
 
-    <div class="grid">
-        <div class="chart-container">
+    <div class="grid" style="max-width: 100%; margin: auto;">
+        <div class="chart-container" style="width: 100%;">
             <h3>Coverage Breakdown by Party</h3>
-            <iframe src="./figures/interactive_mentions_plot.html" style="width: 100%; height: 500px;" frameborder="0"></iframe>
+            <iframe src="./figures/interactive_mentions_plot.html" style="width: 100%; height: 600px;" frameborder="0"></iframe>
         </div>
     </div>
-    <div class="grid">
-        <div class="chart-container">
+    <div class="grid" style="max-width: 100%; margin: auto;">
+        <div class="chart-container" style="width: 100%;">
             <h3>Coverage Breakdown by Political Actor</h3>
-            <iframe src="./figures/interactive_mentions_plot_politicians.html" style="width: 100%; height: 500px;" frameborder="0"></iframe>
+            <iframe src="./figures/interactive_mentions_plot_politicians.html" style="width: 100%; height: 600px;" frameborder="0"></iframe>
         </div>
     </div>
 </div>
+
+
 
 
 
