--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,43 +12,51 @@
             padding: 0;
             background-color: #f4f4f4;
         }
+
         header {
             background-color: #2c3e50;
             color: white;
             padding: 20px;
             text-align: center;
         }
+
         nav {
             display: flex;
             justify-content: space-around;
             background-color: #34495e;
             padding: 15px;
         }
+
         nav a {
             color: white;
             text-decoration: none;
             font-weight: bold;
         }
+
         .content {
             padding: 20px;
             max-width: 1200px;
             margin: auto;
         }
+
         .grid {
             display: grid;
             grid-template-columns: 1fr; /* Single column by default */
             gap: 20px;
         }
+
         .chart-container {
             background-color: white;
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+
         .chart-container img {
             max-width: 100%;
             border-radius: 10px;
         }
+
         footer {
             background-color: #2c3e50;
             color: white;
@@ -55,8 +64,43 @@
             padding: 20px;
             margin-top: 30px;
         }
+
+        /* Media queries for responsiveness */
+        @media (min-width: 768px) {
+            .grid {
+                grid-template-columns: repeat(2, 1fr); /* Two columns for tablets */
+            }
+        }
+
+        @media (min-width: 1200px) {
+            .grid {
+                grid-template-columns: repeat(3, 1fr); /* Three columns for large screens */
+            }
+        }
+
+        /* Style for mobile screens */
+        @media (max-width: 600px) {
+            header {
+                font-size: 18px;
+            }
+
+            .chart-container {
+                padding: 10px;
+            }
+
+            .content {
+                padding: 10px;
+            }
+        }
     </style>
 </head>
+
+
+
+
+
+
+
 <body>
 
 <header>
