--- a/coverage.html
+++ b/coverage.html
@@ -39,15 +39,6 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        iframe {
-            width: 100vw;
-            height: 50vh;
-        }
-        @media (max-width: 768px) {
-            iframe {
-                height: 40vh;
-            }
-        }
         footer {
             background-color: #2c3e50;
             color: white;
@@ -75,11 +66,16 @@
     <div class="chart-container">
         <h3>Coverage Composition</h3>
         <p> 
+
             Assessing media bias is inherently challenging and often tied to a subjective notion of truth. Here, we propose an agnostic measure that focuses on variations in how Spanish outlets cover the same stories. This metric doesn’t explicitly reveal bias but helps identify topics with lower consensus. The interactive plot visualizes the entropy score for each day: lower scores represent more agreement among outlets on key topics. Click on any date to explore topic compositions. For further details, refer to the Methodology section.
+
+
         </p>
-        <iframe src="https://spanish-media-monitor-7458bc4bd3d9.herokuapp.com" frameborder="0"></iframe>
+        <iframe src="https://spanish-media-monitor-7458bc4bd3d9.herokuapp.com" width="100%" height="600" frameborder="0"></iframe>
     </div>
 </div>
+
+
 
 </body>
 </html>
